Fix menu toggle z-index

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -49,7 +49,7 @@ body {
             /* temporary solution to fix width not 100%*/
             /* margin-left: 6px; */
             /* temporary solution to fix width not 100%*/
-            background: linear-gradient(to bottom, lightblue, lightgreen);
+            background: linear-gradient(to bottom, lightblue, #455f3b);
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -64,7 +64,7 @@ body {
             /* temporary solution to fix width not 100%*/
             /* margin-left: 6px; */
             /* temporary solution to fix width not 100%*/
-            background: linear-gradient(to bottom, lightgreen, darkgreen) ;
+            background: #455f3b ;
         }
         &:nth-of-type(3) {
             /* temporary solution to fix width not 100%*/
