--- a/src/styles/effect1.scss
+++ b/src/styles/effect1.scss
@@ -91,6 +91,9 @@
             align-items: center;  
             text-align: center;  
             padding-top: 5px;
+            > a {
+                color: #d8e6e6;
+            }
         }
     }
 
@@ -110,6 +113,7 @@
         flex-direction: column;
         margin: auto 0;
         padding: 0;
+        margin-top: 4px;
         > li {
             position: relative;
             text-align: center;
@@ -136,7 +140,7 @@
             background-image: linear-gradient(to bottom, #5edfff, #b2fcff);
             display: block;
             opacity: 0;
-            @for $i from 1 through 11 {
+            @for $i from 1 through 8 {
                 &:nth-child(#{$i}) {
                     animation: {
                         name: menu1;
@@ -159,7 +163,7 @@
         li:hover {
             background: linear-gradient(#073,#0fa);
         }
-        > li:nth-child(11) {
+        > li:nth-child(8) {
             border-bottom-left-radius: 10px;
             border-bottom-right-radius: 10px;
         }
@@ -221,7 +225,7 @@
             background-image: linear-gradient(to bottom,rgb(190, 54, 99), hotpink);
             display: block;
             opacity: 0;
-            @for $i from 1 through 10 {
+            @for $i from 1 through 8 {
                 &:nth-child(#{$i}) {
                     animation: {
                         name: menu3;
@@ -245,7 +249,7 @@
         li:hover {
             background: linear-gradient(#073,#0fa);
         }
-        > li:nth-child(10) {
+        > li:nth-child(8) {
             border-bottom-left-radius: 10px;
             border-bottom-right-radius: 10px;
         }
@@ -261,7 +265,7 @@
             background-image: linear-gradient(to bottom, rgb(253, 96, 108),rgb(253, 188, 112));
             display: block;
             opacity: 0;
-            @for $i from 1 through 10 {
+            @for $i from 1 through 8 {
                 &:nth-child(#{$i}) {
                     animation: {
                         name: menu4;
@@ -285,7 +289,7 @@
         li:hover {
             background: linear-gradient(#073,#0fa);
         }
-        > li:nth-child(10) {
+        > li:nth-child(8) {
             border-bottom-left-radius: 10px;
             border-bottom-right-radius: 10px;
         }
