--- a/src/styles/effect3.scss
+++ b/src/styles/effect3.scss
@@ -234,6 +234,7 @@ $letter-spacing: 2px;
         }
 
         > section {
+            padding: 40px !important;
             position: absolute;
             top: 0;
             bottom: 0;
