--- a/src/styles/effect4.scss
+++ b/src/styles/effect4.scss
@@ -87,7 +87,7 @@
     color: #fff;
     background: rgba(52, 58, 64, 0.5);
     line-height: 50px;
-    z-index: 999;
+    z-index: 98;
         > .hamburger-icon {
             margin: auto;
             width: 70%;
